--- a/pom.xml
+++ b/pom.xml
@@ -15,26 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.bj58.spat</groupId>
-            <artifactId>com.bj58.spat.wmb.client</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.bj58.house.timer</groupId>
-            <artifactId>com.bj58.house.timer.timer-parent</artifactId>
-            <version>1.0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha1</version>
         </dependency>
     </dependencies>
 
